feat(user_controller): add createUser method and hash user password
