# cmd/domain/usecases/user_usecase/create_user_request.go
@@ -1,0 +1,7 @@
+package user_usecase
+
+type CreateUserRequest struct {
+	Name     *string `json:"name"`
+	Email    string  `json:"email"`
+	Password string  `json:"password"`
+}
