# cmd/main/docs/swagger.json
@@ -1,23 +1,17 @@
-// Package docs Code generated by swaggo/swag. DO NOT EDIT
-package docs
-
-import "github.com/swaggo/swag"
-
-const docTemplate = `{
-    "schemes": {{ marshal .Schemes }},
+{
     "swagger": "2.0",
     "info": {
-        "description": "{{escape .Description}}",
-        "title": "{{.Title}}",
+        "description": "Golang server",
+        "title": "KitKit back golang",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
             "name": "Rafael Cavalcante",
             "email": "rafael.cavalcante@tallos.com.br"
         },
-        "version": "{{.Version}}"
+        "version": "1.0"
     },
-    "host": "{{.Host}}",
-    "basePath": "{{.BasePath}}",
+    "host": "localhost:3000",
+    "basePath": "/api",
     "paths": {
         "/users": {
             "get": {
@@ -69,7 +63,7 @@ const docTemplate = `{
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/user_controller.CreateUserRequest"
+                            "$ref": "#/definitions/user_usecase.CreateUserRequest"
                         }
                     }
                 ],
@@ -136,20 +130,6 @@ const docTemplate = `{
                 }
             }
         },
-        "user_controller.CreateUserRequest": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
         "user_models.User": {
             "type": "object",
             "properties": {
@@ -172,28 +152,24 @@ const docTemplate = `{
                     "type": "string"
                 }
             }
+        },
+        "user_usecase.CreateUserRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
         }
     },
     "externalDocs": {
         "description": "OpenAPI",
         "url": "https://swagger.io/resources/open-api/"
     }
-}`
-
-// SwaggerInfo holds exported Swagger Info so clients can modify it
-var SwaggerInfo = &swag.Spec{
-	Version:          "1.0",
-	Host:             "localhost:3000",
-	BasePath:         "/api",
-	Schemes:          []string{},
-	Title:            "KitKit back golang",
-	Description:      "Golang server",
-	InfoInstanceName: "swagger",
-	SwaggerTemplate:  docTemplate,
-	LeftDelim:        "{{",
-	RightDelim:       "}}",
-}
-
-func init() {
-	swag.Register(SwaggerInfo.InstanceName(), SwaggerInfo)
 }
